<resources>
    <string name="app_name">Pos Controller</string>
    <string name="app_name_settings">Settings</string>
    <string name="app_name_billing_app">Billing App</string>
    <string name="cancel_button">CANCEL</string>
    <string name="txt_version">Version : </string>
    <string name="txt_save_settings">Save Settings</string>
    <string name="txt_tcp_ip">TCP IP</string>
    <string name="txt_tcp_bt">BT</string>
    <string name="txt_bt_device">Device</string>
    <string name="txt_bt_devices">Devices</string>
    <string name="txt_bt_device_id">Device ID</string>
    <string name="txt_slno">Sl.no</string>
    <string name="txt_ssid">SSID</string>
    <string name="txt_scan_devices">Scan Devices</string>
    <string name="txt_amount">Enter Amount</string>
    <string name="txt_trans">Process</string>
    <string name="txt_connection_timeout">Con TimeOut</string>
    <string name="txt_log_retain">Days to Retain</string>
    <string name="txt_connection_retries">Con Retries</string>
    <string name="txt_log_level">Log Level</string>
    <string name="txt_log_path">Log Path</string>
    <string name="txt_priority">PRIORITY</string>
    <string name="txt_priority1">PRIORITY :</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_save">Save</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_active_btn">Active</string>
    <string name="txt_Inactive_btn">Inactive</string>
    <string name="txt_colon">:</string>
    <string name="txt_port">Port</string>
    <string name="txt_ip">IP</string>
    <string name="txt_scan_btn">SCAN</string>
    <string name="txt_connect_btn">TEST</string>
    <string name="txt_transactions">Transactions</string>
    <string name="txt_purchase">Purchase</string>
    <string name="please_wait">Please wait...</string>
    <string name="cashier_id">Cashier ID</string>
    <string name="cashier_name">Cashier Name</string>
    <string name="txt_connection_fallback_allowed">Connection Fallback</string>
    <string name="txt_log_option">Log Option</string>
    <string name="txt_powered_by">Powered by </string>
    <string name="txt_mohan">Mohan </string>
    <string name="txt_123456789">123456789 </string>
    <string name="txt_hint345">345</string>
    <string name="txt_hint123">123</string>
    <string name="txt_name">Name</string>

    <string-array name="connection_mode_list">
        <item>TCPIP</item>
        <item>BT</item>
        <item>App To App</item>
        <!-- Add more items as needed -->
    </string-array>

    <string-array name="trans_type_items">
        <item>Purchase</item>
        <item>UPI</item>
        <item>Brand EMI</item>
        <item>Void</item>
        <item>Refund</item>
        <item>Bank EMI</item>
        <item>Preauth</item>
        <item>Sale Complete</item>
        <item>Bank Emi Single Transaction</item>
        <item>Zest Money Bank Emi</item>
        <item>Zest Money Brand Emi</item>
        <item>Zest Money Void</item>
        <item>HDFC Flexipay</item>
        <item>Bharat Qr</item>
        <item>Twid Void</item>
        <item>Airtel Bank Transaction</item>
        <item>Cod Sale</item>
        <item>Cod Void</item>
        <item>Amazon Pay</item>
        <item>Amazon Pay Sale ChargeCase</item>
        <item>My Emi</item>
        <item>Twid Integration</item>
        <item>Qwikcilver Redemption</item>
        <item>CardLess Bank Emi</item>
        <item>CardLess Brand Emi</item>
        <item>CardLess Bank and Brand Emi</item>
        <item>GiftIcon</item>
        <item>Magic Pin</item>
        <item>Magic Pin Void</item>
        <item>Reward Transaction</item>
        <item>Payback Transaction</item>
        <item>Void Payback Transaction</item>
        <item>Third Party Wallet Integration</item>
        <item>Void Of Sale Charge</item>
        <item>Get Status of Sale Charge</item>
        <item>Sodexo Integration</item>
        <item>Sodexo Void Request</item>
        <item>Paper Pos Integration</item>
        <item>Settlement</item>
        <!-- Add more items as needed -->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
</resources>