<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cashier_Id"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:text="@string/cashier_id"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/cashier_Id_Et"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cashier_Id_Et"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/rectangle_style"
        android:gravity="center_horizontal"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/cashier_name_Et"
        app:layout_constraintDimensionRatio="14:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:layout_marginStart="@dimen/dp8"
        android:layout_marginLeft="@dimen/dp8"
        android:text="@string/cashier_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/cashier_name_Et"
        app:layout_constraintDimensionRatio="15:2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cashier_Id" />

    <EditText
        android:id="@+id/cashier_name_Et"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/rectangle_style"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:maxLength="10"
        app:layout_constraintDimensionRatio="14:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cashier_Id_Et" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        app:layout_constraintTop_toBottomOf="@id/cashier_name_Et">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveDialog"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:background="@color/dark_green"
            android:text="@string/txt_save"
            android:textColor="@color/white"
            android:textSize="@dimen/bt_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancelDialog"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelDialog"
            android:layout_width="@dimen/dp0"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangular_button_border"
            android:text="@string/txt_cancel"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/bt_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@id/saveDialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>